syntax = "proto3";

package sgtypes;

message ChannelTransactionRequest {
    bytes payload = 1;
}

message ChannelTransactionResponse {
    bytes payload = 1;
}